fix layout shifts

--- a/src/layouts/layout.css
+++ b/src/layouts/layout.css
@@ -24,10 +24,11 @@
 @font-face {
   font-family: "Loved by the King";
   src: url("/fonts/LovedbytheKing-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 body {
-  font-family: "xxxxxxxxxxxxxxxx", sans-serif;
+  font-family: sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
